# rustlab-2024

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: blinky.rs  probe.rs  scd4x-example.rs
src/: main.rs
