[package]
name = "metro-co2"
version = "0.1.0"
edition = "2021"

[dependencies]
adafruit-metro-rp2040 = "0.1.0"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
panic-probe = { version = "0.3.2", features = ["print-rtt"] }
rtt-target = "0.5.0"
scd4x = "0.3.0"
smart-leds = "0.3.0"
ws2812-pio = "0.8.0"
